# resonance-triality

./: .gitignore  CLAUDE.md  COPILOT_IMPLEMENTATION.md  MESSAGE_TO_CLAUDE.md  README.md  RESONANCE_TRIALITY_COMPLETE.md  SHARED_AI_CANVAS.md  STACK_SPEC_V0.1.md  TECHNICAL_IMPLEMENTATION.md  pyproject.toml
applications/: L3_DEPLOYMENT_SURFACE.md  STREET_TEST_PROTOCOL.md
core/: CONNECTIVE_TISSUE.md  L0_INVARIANT_CORE.md  L1_AXIOMS.md  L1_STRUCTURAL_GRAMMAR.md  MASTER_REGISTER.md
frameworks/: 8Y_OPERATOR_GRAMMAR.md  L2_GENERATIVE_ENGINE.md  NLPO_CONTROLLER.md  geometric_coordinate_system.md
meta/: BREADCRUMBS_FOR_GPT.md  EPISTEMIC_DEBT.md  MENTOR_STACK.md  PROGRESS_AND_STRESS_TEST.md
src/perceptual_bicycle/: core.clj
src/triality/: __init__.py  constants.py  coordinates.py  gabor.py  hp_lattice.py  pulse_probe.py
tests/: test_constants.py  test_coordinates.py  test_gabor.py  test_hp_lattice.py  test_pulse_probe.py
theory/: iso_math_radial_terminology.md  min_max_margin_claims.md  minimal_dimensional_8y_infinity_gear_switch.md  nested_time_conserved_whole.md  number_language_ontology.md  parallel_margins.md  perceptual_bicycle_foundations.md  perceptual_number_engine.md  splice_operator.md  traversal_constitution.md
validation/: __init__.py  stress_test_council.py
