[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-triality"
version = "0.1.0"
description = "Geometric coordinate system S = (rho, alpha, phi) for Resonance Triality"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
